@@ -69,7 +69,9 @@ osd_lyrics_SOURCES = \
 	ol_player_guayadeque02.c \
 	ol_player_clementine.c    \
 	ol_player_listen.c \
-	ol_elapse_emulator.c \
+	ol_player_deciber.c \
+	ol_player_gmusicbrowser.c \
+	ol_elapse_emulator.c \	
 	ol_md5.c \
 	ol_utils.c \
 	ol_utils_dbus.c \
