@@ -9,6 +9,8 @@
 #include "ol_player_listen.h"
 #include "ol_player_clementine.h"
 #include "ol_player_guayadeque02.h"
+#include "ol_player_deciber.h"
+#include "ol_player_gmusicbrowser.h"
 #ifdef ENABLE_AMAROK1
 #include "ol_player_amarok1.h"
 #endif  /* ENABLE_AMAROK1 */
@@ -49,6 +51,8 @@ ol_player_init ()
     ol_player_register (ol_player_clementine_get ());
     ol_player_register (ol_player_listen_get ());
     ol_player_register (ol_player_guayadeque02_get ());
+    ol_player_register (ol_player_deciber_get ());
+    ol_player_register (ol_player_gmusicbrowser_get ());
 #ifdef ENABLE_XMMS2
     ol_player_register (ol_player_xmms2_get ());
 #endif  /* ENABLE_XMMS2 */
